update to install kubernetes v1.26.1

--- a/playbooks/k8s_all.yaml
+++ b/playbooks/k8s_all.yaml
@@ -1,3 +1,4 @@
 - import_playbook: common.yaml
 - import_playbook: control_planes.yaml
 - import_playbook: nodes.yaml
+- import_playbook: update-and-reboot.yaml
