--- a/roles/control_planes/tasks/main.yaml
+++ b/roles/control_planes/tasks/main.yaml
@@ -33,7 +33,7 @@
   become: true
 
 - name: install pod network
-  shell: kubectl apply -f https://docs.projectcalico.org/manifests/calico.yaml 
+  shell: kubectl apply -f https://raw.githubusercontent.com/projectcalico/calico/v3.25.0/manifests/calico.yaml
 
 - name: Add k alias for user
   lineinfile:
